--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ bio: Data Science Solutions for Genomic Strategies
 # if it's an external image, update below for true
 # better with square images
 external-image: false
-picture: assets/images/profile.jpg
+# picture: assets/images/profile.jpg
 
 # If you want to include your resume, set to true
 # and specify source (external or local).
@@ -57,14 +57,9 @@ authors:
         name: Magnalytic Solutions
         bio:  
         external-image: false
-        picture: assets/images/profile.jpg
+        #picture: assets/images/profile.jpg
         twitter: johndoe
-    jamesfoster:
-        name: James Foster
-        bio: A Man who develops software with coffee
-        external-image: false
-        picture: assets/images/james.jpg
-        twitter: jamesfoster
+   
 
 # do you want a larger site? change the option below
 # options: [normal, large] | default: normal
