--- a/_config.yml
+++ b/_config.yml
@@ -42,15 +42,15 @@ permalink: /:title/
 # linkedin: mylinkedin
 # youtube: myyoutube
 # spotify: myspotify
-#github: mygithub
+github: magnalyticsolutions
 # lastfm: mylastfm
 # stackoverflow: 7044681/mystackoverflow
 # quora: userquora
 # reddit: username
-medium: medium
+# medium: medium
 # vimeo: myvimeo
 # lanyrd: mylanyrd
-email: myemail@gmail.com
+email: magnalyticsolutions@gmail.com
 
 authors:
     MagnalyticSolutions:
@@ -58,7 +58,7 @@ authors:
         bio:  
         external-image: false
         #picture: assets/images/profile.jpg
-        twitter: johndoe
+        
    
 
 # do you want a larger site? change the option below
