--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ bio: Data Science Solutions for Genomic Strategies
 
 # if it's an external image, update below for true
 # better with square images
-external-image: false
+# external-image: false
 # picture: assets/images/profile.jpg
 
 # If you want to include your resume, set to true
@@ -56,7 +56,7 @@ authors:
     MagnalyticSolutions:
         name: Magnalytic Solutions
         bio:  
-        external-image: false
+        # external-image: false
         #picture: assets/images/profile.jpg
         
    
@@ -93,7 +93,7 @@ post-advance-links: [blog]
 show-author: true
 
 # do you want some animations?
-animation: true
+#animation: true
 
 plugins:
   - jekyll-seo-tag
