--- a/_config.yml
+++ b/_config.yml
@@ -55,7 +55,7 @@ email: magnalyticsolutions@gmail.com
 authors:
     MagnalyticSolutions:
         name: Magnalytic Solutions
-        bio:  
+        bio:  Data Science Solutions for Genomic Strategies
         external-image: false
         picture: assets/images/profile.jpg
         
