--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,22 @@
 # main text of home
 name: Magnalytic Solutions
-bio: Data Science Solutions for Genomic Strategies
+bio: Custom Data Science Analysis
 
 # twitter summary info
-#description: A blog about technology and stuff related
+description: A blog about technology and stuff related
 
 # if it's an external image, update below for true
 # better with square images
- external-image: false
- picture: assets/images/profile.jpg
+external-image: false
+picture: assets/images/profile.jpg
 
 # If you want to include your resume, set to true
 # and specify source (external or local).
-resume: false
-resume-external: false
+resume: true
+resume-external: true
 resume-url: https://google.com/?q=my+resume
 
-url: magnalyticsolutions.github.io/magnalyticsolutions
+url: https://koppl.in/indigo
 # your url: http://USERNAME.github.io
 
 permalink: /:title/
@@ -29,37 +29,42 @@ permalink: /:title/
 # analytics-piwik-id: 1
 
 # if you don't want comments in your posts, leave categories empty
-#disqus:
-#  shortname: mydisqus # enter this from your disqus account
-#  categories: [blog, project] # only show disqus for posts that have these categories
+disqus:
+  shortname: mydisqus # enter this from your disqus account
+  categories: [blog, project] # only show disqus for posts that have these categories
 
 # if you don't have any of social below, comment the line
-#facebook: myfacebook
-#twitter: mytwitter
+facebook: myfacebook
+twitter: mytwitter
 # google: mygoogle
 # instagram: myinstagram
 # pinterest: mypinterest
 # linkedin: mylinkedin
 # youtube: myyoutube
 # spotify: myspotify
-github: magnalyticsolutions
+github: mygithub
 # lastfm: mylastfm
 # stackoverflow: 7044681/mystackoverflow
 # quora: userquora
 # reddit: username
-# medium: medium
+medium: medium
 # vimeo: myvimeo
 # lanyrd: mylanyrd
-email: magnalyticsolutions@gmail.com
+email: myemail@gmail.com
 
 authors:
-    MagnalyticSolutions:
-        name: Magnalytic Solutions
-        bio:  Data Science Solutions for Genomic Strategies
+    johndoe:
+        name: John Doe
+        bio: A Man who travels the world eating noodles
         external-image: false
         picture: assets/images/profile.jpg
-        
-   
+        twitter: johndoe
+    jamesfoster:
+        name: James Foster
+        bio: A Man who develops software with coffee
+        external-image: false
+        picture: assets/images/james.jpg
+        twitter: jamesfoster
 
 # do you want a larger site? change the option below
 # options: [normal, large] | default: normal
@@ -74,8 +79,8 @@ width: normal
 projects: true
 
 # if you don't need "about" or "blog", comment them out below
-#about: true
-#blog: true
+about: true
+blog: true
 
 # do you want to show the "read time" of the posts?
 read-time: true
@@ -93,7 +98,7 @@ post-advance-links: [blog]
 show-author: true
 
 # do you want some animations?
-#animation: true
+animation: true
 
 plugins:
   - jekyll-seo-tag
