--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ resume: true
 resume-external: true
 resume-url: https://google.com/?q=my+resume
 
-url: 
+url: www.magnalyticsolutions.com
 # your url: http://USERNAME.github.io
 
 permalink: /:title/
@@ -108,4 +108,4 @@ plugins:
   - jekyll-admin
 
 jekyll-mentions:
-    base_url: https://github.com
+    base_url: www.magnalyticsolutions.com
